// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Collapse should render closed Collapse 1`] = `
<details
  className="details"
  open={false}
>
  <summary
    className="summary"
  >
    Collapse
    <IconRight
      className="arrow"
    />
  </summary>
  Collapse body
</details>
`;

exports[`UI/Collapse should render default opened Collapse 1`] = `
<details
  className="details"
  open={true}
>
  <summary
    className="summary"
  >
    Collapse
    <IconRight
      className="arrow"
    />
  </summary>
  Collapse body
</details>
`;
